# metarepo

./: .ai-context.yml  .gitattributes  .gitignore  .lychee.toml  0001-wgx-metarepo-canon.patch  AGENTS.md  CONTRIBUTING.md  Justfile  Makefile  README.md  corrected.patch  generate_patches.sh  index.js  just.1  package-lock.json  package.json  puppeteer-config.json  push.err  pyproject.toml  repos.yml  toolchain.versions.yml  user.patch  user_shim.patch
.devcontainer/: README.md  _setup-wgx-bridge.template.sh  _wgx-bridge-patch-devcontainer-json.py  justfile  sync-from-toolchain.sh  sync-wgx-bridge-to-fleet.sh
.github/: dependabot.yml  grabowski-required-checks.json
.mcp/: registry.json
.wgx/: profile.example.yml  profile.yml
ai-contexts/: README.md  aussensensor.ai-context.yml  chronik.ai-context.yml  contracts-mirror.ai-context.yml  contracts.ai-context.yml  hausKI-audio.ai-context.yml  hauski.ai-context.yml  heimgeist.ai-context.yml  heimlern.ai-context.yml  lenskit.ai-context.yml  mitschreiber.ai-context.yml  repoground.ai-context.yml  semantAH.ai-context.yml  semantah.ai-context.yml  sichter.ai-context.yml  tools.ai-context.yml  vault-gewebe.ai-context.yml  vault-privat.ai-context.yml  wgx.ai-context.yml
completions/: just.bash
contracts/: README.md  agent.workflow.schema.json  audio.events.schema.json  aussen.event.schema.json  consumer-evidence.v1.json  consumers.yaml  decision.outcome.schema.json  (+29 more)
templates/agent-kit/: Justfile  pyproject.toml
templates/agent-kit/agents/: graph.py  state.py
templates/agent-kit/tests/: conftest.py  test_tools.py
(+487 files in other folders)
