[project]
name = "metarepo-tools"
version = "0.1.0"
description = "Utilities for generating Heimgewebe org assets"
authors = [{ name = "Heimgewebe" }]
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
  "jsonschema>=4.25.1",
  "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
