[project]
name = "agent-kit"
version = "0.1.0"
description = "LangGraph-basierter Agent-Skeleton für heimgewebe"
requires-python = ">=3.11"
dependencies = [
  # Pins are aligned with Python 3.11 support in LangGraph/LangChain; the lockfile captures the
  # exact resolution while keeping the template lightweight.
  "langgraph==0.2.32",
  "langchain==0.3.7",
  "pydantic>=2.6,<3",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "jsonschema>=4,<5",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
